@@ -1,0 +1,1 @@
+{"printer_types": [{"id": "1.4.0", "name": "Original Prusa i3 MK4", "version": 4, "type": 1, "is_manipulator": false, "parameters": {"temp_bed": {"max": 125, "min": 0}, "extrusion": {"max": 100, "min": -10}, "feedrate_e": {"max": 100, "min": 0}, "feedrate_x": {"max": 2700, "min": 0}, "feedrate_y": {"max": 2700, "min": 0}, "feedrate_z": {"max": 1000, "min": 0}, "position_x": {"max": 255, "min": 0}, "position_y": {"max": 212.5, "min": -4}, "position_z": {"max": 210, "min": 0.15}, "print_flow": {"max": 999, "min": 10}, "print_speed": {"max": 999, "min": 10}, "temp_nozzle": {"max": 305, "min": 0}, "min_temp_nozzle_e": 160}, "subversion": 0}, {"id": "2.1.0", "name": "Original Prusa MINI", "version": 1, "type": 2, "is_manipulator": false, "parameters": {"temp_bed": {"max": 122, "min": 0}, "extrusion": {"max": 100, "min": -10}, "feedrate_e": {"max": 100, "min": 0}, "feedrate_x": {"max": 2700, "min": 0}, "feedrate_y": {"max": 2700, "min": 0}, "feedrate_z": {"max": 1000, "min": 0}, "position_x": {"max": 250, "min": 0}, "position_y": {"max": 210, "min": 0}, "position_z": {"max": 210, "min": 0}, "print_flow": {"max": 999, "min": 10}, "print_speed": {"max": 999, "min": 10}, "temp_nozzle": {"max": 295, "min": 0}, "min_temp_nozzle_e": 160}, "subversion": 0}, {"id": "3.1.0", "name": "Original Prusa XL", "version": 1, "type": 3, "is_manipulator": false, "subversion": 0}, {"id": "4.1.0", "name": "Original Prusa iX", "version": 1, "type": 4, "is_manipulator": false, "parameters": {"temp_bed": {"max": 125, "min": 0}, "extrusion": {"max": 100, "min": -10}, "feedrate_e": {"max": 100, "min": 0}, "feedrate_x": {"max": 2700, "min": 0}, "feedrate_y": {"max": 2700, "min": 0}, "feedrate_z": {"max": 1000, "min": 0}, "position_x": {"max": 255, "min": 0}, "position_y": {"max": 212.5, "min": -4}, "position_z": {"max": 210, "min": 0.15}, "print_flow": {"max": 999, "min": 10}, "print_speed": {"max": 999, "min": 10}, "temp_nozzle": {"max": 305, "min": 0}, "min_temp_nozzle_e": 160}, "subversion": 0}, {"id": "253.1.0", "name": "Original Prusa EXTRACTOR", "version": 1, "type": 253, "is_manipulator": true, "subversion": 0}, {"id": "5.1.0", "name": "Original Prusa SL1", "version": 1, "type": 5, "is_manipulator": false, "subversion": 0}, {"id": "1.3.0", "name": "Original Prusa i3 MK3", "version": 3, "type": 1, "is_manipulator": false, "parameters": {"temp_bed": {"max": 125, "min": 0}, "extrusion": {"max": 100, "min": -10}, "feedrate_e": {"max": 100, "min": 0}, "feedrate_x": {"max": 2700, "min": 0}, "feedrate_y": {"max": 2700, "min": 0}, "feedrate_z": {"max": 1000, "min": 0}, "position_x": {"max": 255, "min": 0}, "position_y": {"max": 212.5, "min": -4}, "position_z": {"max": 210, "min": 0.15}, "print_flow": {"max": 999, "min": 10}, "print_speed": {"max": 999, "min": 10}, "temp_nozzle": {"max": 305, "min": 0}, "min_temp_nozzle_e": 160}, "subversion": 0}, {"id": "1.3.1", "name": "Original Prusa i3 MK3S", "version": 3, "type": 1, "is_manipulator": false, "description": "", "parameters": {"temp_bed": {"max": 125, "min": 0}, "extrusion": {"max": 100, "min": -10}, "feedrate_e": {"max": 100, "min": 0}, "feedrate_x": {"max": 2700, "min": 0}, "feedrate_y": {"max": 2700, "min": 0}, "feedrate_z": {"max": 1000, "min": 0}, "position_x": {"max": 255, "min": 0}, "position_y": {"max": 212.5, "min": -4}, "position_z": {"max": 210, "min": 0.15}, "print_flow": {"max": 999, "min": 10}, "print_speed": {"max": 999, "min": 10}, "temp_nozzle": {"max": 305, "min": 0}, "min_temp_nozzle_e": 160}, "subversion": 1}, {"id": "252.1.0", "name": "Original Prusa HARVESTER", "version": 1, "type": 252, "is_manipulator": true, "description": "Prusa Farm Harvester", "subversion": 0}]}
